# qwentin

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: forward_qwen.cu
tools/: accept_probe.py  batched_smoke.py  bench_rounds.py  convert.py  convert_qwen_tqf.py  inspect_tqf.py  mtp_accept.py  mtp_calib_dump.py  mtp_calib_train.py  mtp_engine_smoke.py  mtp_spec_smoke.py  mtp_torch_check.py  mtp_tree_smoke.py  mtp_verify_smoke.py  needle_check.py  paged_smoke.py  persist_phases.py  serve_batched.py  serve_openai.py  serve_smoke.py  sparse_pack.py
